[project]
name = "monte-carlo-simulator"
version = "0.1.0"
description = ""
authors = [
    {name = "Thomas Ricketts",email = "tbrricketts@gmail.com"}
]
license = "MIT" 
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "yfinance (>=0.2.55,<0.3.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "scipy (>=1.15.2,<2.0.0)",
    "numpy (>=2.2.4,<3.0.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "requests-cache (>=1.2.1,<2.0.0)",
    "pyrate-limiter (<3.0)",
    "requests-ratelimiter (>=0.7.0,<0.8.0)",
    "sv-ttk (>=2.6.0,<3.0.0)",
]

[tool.poetry]
packages = [{include = "monte_carlo_simulator", from = "src"}]



[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
isort = "^6.0.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
